# ch.grischamedia.inventree.inventoryinout

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml
inventree_inventoryinout/: __init__.py  apps.py  forms.py  plugin.py  urls.py  views.py
inventree_inventoryinout/locale/de/LC_MESSAGES/: django.po
inventree_inventoryinout/locale/en/LC_MESSAGES/: django.po
inventree_inventoryinout/static/inventree_inventoryinout/: inout.css  inout.js
inventree_inventoryinout/templates/inventree_inventoryinout/: index.html
