# Copyright (C) 2025 GrischaMedia.ch
# Author: Sandro Geyer
# SPDX-License-Identifier: GPL-3.0-or-later

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "inventree-inventory-inout"
version = "0.4.21"
description = "InvenTree plugin: batch inventory IN/OUT via IPN scanning"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "GrischaMedia", email = "info@grischamedia.ch" }]
keywords = ["inventree", "plugin", "inventory", "stock"]
classifiers = [
  "Framework :: Django",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
]

[project.urls]
Homepage = "https://grischamedia.ch"

[tool.setuptools]
packages = ["inventree_inventoryinout"]
include-package-data = true

[tool.setuptools.package-data]
"inventree_inventoryinout" = [
  "templates/inventree_inventoryinout/*.html",
  "static/inventree_inventoryinout/*.js",
  "static/inventree_inventoryinout/*.css",
  "locale/*/LC_MESSAGES/*.po",
]
[project.entry-points."inventree.plugins"]
inventoryinout = "inventree_inventoryinout.plugin:InventoryInOutPlugin"

[project.entry-points.inventree_plugins]
inventoryinout = "inventree_inventoryinout.plugin:InventoryInOutPlugin"